# webgpu-emscripten-template

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  dotclangd_gen.py  index.js  index.wasm  main.cpp  webgpu_glfw.cpp
